<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llCustomActioBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:clickable="true"
        android:background="@drawable/clickable_linearlayout"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/fa_chevron_left"
            android:textColor="@android:color/white"
            android:textSize="@dimen/back_size" />

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/fa_home"
            android:textColor="@android:color/white"
            android:textSize="@dimen/back_size" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_size" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/llCustomActioBar"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:background="@drawable/clickable_linearlayout"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fa_search"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_size" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@id/tvSearch"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:singleLine="true"
            android:textColorHint="#ffffff"

            android:visibility="visible"
            android:layout_height="wrap_content"
            android:hint="search"/>


    </RelativeLayout>



</RelativeLayout>